### Changed - レイアウト調整

--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -73,7 +73,7 @@ AT-01
 </div>
 
 <div class="form-container search">
-    <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
+    <div id="list" style="display:none;">
         <table class="table table-bordered table-striped mb-0">
             <thead>
                 <tr>
