--- a/views/addOns/index.ejs
+++ b/views/addOns/index.ejs
@@ -83,46 +83,67 @@ PO-01
     </div>
 </div>
 
-<div class="form-container search">
-    <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
+<div class="search">
+    <div id="list" style="display:none;">
         <div class="card">
             <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead class="text-primary">
-                            <tr>
-                                <th>コード</th>
-                                <th>名称</th>
-                                <th>発生金額</th>
-                                <th>アイテム</th>
-                                <th>追加特性</th>
-                            </tr>
-                        </thead>
+                <div class="material-datatables">
+                    <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                        <div class="row">
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
+                                    cellspacing="0" width="100%" style="width: 100%;" role="grid"
+                                    aria-describedby="datatables_info">
+                                    <thead class="text-primary">
+                                        <tr>
+                                            <th>コード</th>
+                                            <th>名称</th>
+                                            <th>発生金額</th>
+                                            <th>アイテム</th>
+                                            <th>追加特性</th>
+                                        </tr>
+                                    </thead>
 
-                        <tbody>
-                            <tr id="templateRow">
-                                <td name="id__identifier">
-                                    <a target="_blank" href="/addOns/$id$/update">
-                                        $identifier$
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                    </a>
-                                <td name="name.ja">$name.ja$</td>
-                                <td name="priceSpecification.price__priceSpecification.priceCurrency__referenceQuantity.value"
-                                    style="text-align:right;">
-                                    $priceSpecification.price$ $priceSpecification.priceCurrency$ /
-                                    $referenceQuantity.value$
-                                </td>
-                                <td name="itemOffered.name.ja">$itemOffered.name.ja$</td>
-                                <td name="id__additionalProperty">
-                                    <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
-                                        <span>表示</span>
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                                    <tbody>
+                                        <tr id="templateRow">
+                                            <td name="id__identifier">
+                                                <a target="_blank" href="/addOns/$id$/update">
+                                                    $identifier$
+                                                    <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                                </a>
+                                            <td name="name.ja">$name.ja$</td>
+                                            <td name="priceSpecification.price__priceSpecification.priceCurrency__referenceQuantity.value"
+                                                style="text-align:right;">
+                                                $priceSpecification.price$ $priceSpecification.priceCurrency$ /
+                                                $referenceQuantity.value$
+                                            </td>
+                                            <td name="itemOffered.name.ja">$itemOffered.name.ja$</td>
+                                            <td name="id__additionalProperty">
+                                                <a href="javascript:void(0)" class="showAdditionalProperty"
+                                                    data-id="$id$">
+                                                    <span>表示</span>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 col-md-5">
+                                <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-7">
+                                <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
+                                </div>
+                                <div id="pager" class="div_pager_parent float-right"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div id="pager" class="div_pager_parent"></div>
             </div>
         </div>
     </div>
