--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -86,59 +86,70 @@ Aa-10
                 <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
             </div>
         </form>
-    </div>
-</div>
-
-<div class="form-container search">
-    <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
-        <div class="card">
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead class="text-primary">
-                            <tr>
-                                <th>コード</th>
-                                <th>名称</th>
-                                <th>上映時間</th>
-                                <th>レイティング</th>
-                                <th>公開日</th>
-                                <th>興行終了予定日</th>
-                                <th>追加特性</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr id="templateRow" identifier="$identifier$">
-                                <td name="id__identifier">
-                                    <a target="_blank" href="/creativeWorks/movie/$id$/update">
-                                        $identifier$
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                    </a>
-                                </td>
-                                <td name="name|slice">
-                                    $name$
-                                </td>
-                                <td name="durationAsMinutes" class="text-right">$durationAsMinutes$ min</td>
-                                <td name="contentRating" class="text-center">$contentRating$</td>
-                                <td name="dayPublished">$dayPublished$</td>
-                                <td name="dayAvailabilityEnds">$dayAvailabilityEnds$</td>
-                                <td name="identifier__addtionalProperty">
-                                    <a href="javascript:void(0)" class="showAdditionalProperty"
-                                        data-identifier="$identifier$">
-                                        <span>表示</span>
-                                    </a>
-                                </td>
-                                <td name="id">
-                                    <a target="_blank" href="/creativeWorks/movie/$id$/update">
-                                        編集
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+        <div class="material-datatables">
+            <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="row">
                 </div>
-                <div id="pager" class="div_pager_parent"></div>
+                <div id="list" style="display:none;" class="row">
+                    <div class="col-sm-12">
+                        <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
+                            cellspacing="0" width="100%" style="width: 100%;" role="grid"
+                            aria-describedby="datatables_info">
+                            <thead class="text-primary">
+                                <tr>
+                                    <th>コード</th>
+                                    <th>名称</th>
+                                    <th>上映時間</th>
+                                    <th>レイティング</th>
+                                    <th>公開日</th>
+                                    <th>興行終了予定日</th>
+                                    <th>追加特性</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr id="templateRow" identifier="$identifier$">
+                                    <td name="id__identifier">
+                                        <a target="_blank" href="/creativeWorks/movie/$id$/update">
+                                            $identifier$
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                        </a>
+                                    </td>
+                                    <td name="name|slice">
+                                        $name$
+                                    </td>
+                                    <td name="durationAsMinutes" class="text-right">$durationAsMinutes$ min</td>
+                                    <td name="contentRating" class="text-center">$contentRating$</td>
+                                    <td name="dayPublished">$dayPublished$</td>
+                                    <td name="dayAvailabilityEnds">$dayAvailabilityEnds$</td>
+                                    <td name="identifier__addtionalProperty">
+                                        <a href="javascript:void(0)" class="showAdditionalProperty"
+                                            data-identifier="$identifier$">
+                                            <span>表示</span>
+                                        </a>
+                                    </td>
+                                    <td name="id">
+                                        <a target="_blank" href="/creativeWorks/movie/$id$/update">
+                                            編集
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-5">
+                        <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-7">
+                        <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
+                        </div>
+                        <div id="pager" class="div_pager_parent float-right"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
