--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -81,68 +81,79 @@ Aa-3
                 <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
             </div>
         </form>
-    </div>
-</div>
-
-<div class="form-container search">
-    <div id="list" style="display:none;">
-        <div class="card">
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead class="text-primary">
-                            <tr>
-                                <th>ID</th>
-                                <th>劇場</th>
-                                <th>作品</th>
-                                <th class="text-left">名称</th>
-                                <th>上映期間</th>
-                                <th>上映形態</th>
-                                <th>追加特性</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr id="templateRow" eventId="$id$">
-                                <td name="id__id">
-                                    <a target="_blank" href="/events/screeningEventSeries/$id$/update">
-                                        $id$
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                    </a>
-                                </td>
-                                <td name="location.id__location.name.ja|slice">
-                                    <a target="_blank"
-                                        href="/places/movieTheater/$location.id$/update">$location.name.ja$
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
-                                </td>
-                                <td name="workPerformed.id__workPerformed.identifier__workPerformed.name|slice">
-                                    <a target="_blank"
-                                        href="/creativeWorks/movie/$workPerformed.id$/update">$workPerformed.name$
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
-                                </td>
-                                <td name="name.ja|slice">
-                                    $name.ja$
-                                </td>
-                                <td name="startDay__endDay">$startDay$ - $endDay$</td>
-                                <td name="videoFormat">
-                                    $videoFormat$
-                                </td>
-                                <td name="id__additionalProperty">
-                                    <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
-                                        <span>表示</span>
-                                    </a>
-                                </td>
-                                <td name="id">
-                                    <a target="_blank" href="/events/screeningEventSeries/$id$/update">
-                                        編集
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+        <div class="material-datatables">
+            <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="row">
                 </div>
-                <div id="pager" class="div_pager_parent"></div>
+                <div id="list" style="display:none;" class="row">
+                    <div class="col-sm-12">
+                        <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
+                            cellspacing="0" width="100%" style="width: 100%;" role="grid"
+                            aria-describedby="datatables_info">
+                            <thead class="text-primary">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>劇場</th>
+                                    <th>作品</th>
+                                    <th class="text-left">名称</th>
+                                    <th>上映期間</th>
+                                    <th>上映形態</th>
+                                    <th>追加特性</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr id="templateRow" eventId="$id$">
+                                    <td name="id__id">
+                                        <a target="_blank" href="/events/screeningEventSeries/$id$/update">
+                                            $id$
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                        </a>
+                                    </td>
+                                    <td name="location.id__location.name.ja|slice">
+                                        <a target="_blank"
+                                            href="/places/movieTheater/$location.id$/update">$location.name.ja$
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
+                                    </td>
+                                    <td name="workPerformed.id__workPerformed.identifier__workPerformed.name|slice">
+                                        <a target="_blank"
+                                            href="/creativeWorks/movie/$workPerformed.id$/update">$workPerformed.name$
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
+                                    </td>
+                                    <td name="name.ja|slice">
+                                        $name.ja$
+                                    </td>
+                                    <td name="startDay__endDay">$startDay$ - $endDay$</td>
+                                    <td name="videoFormat">
+                                        $videoFormat$
+                                    </td>
+                                    <td name="id__additionalProperty">
+                                        <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
+                                            <span>表示</span>
+                                        </a>
+                                    </td>
+                                    <td name="id">
+                                        <a target="_blank" href="/events/screeningEventSeries/$id$/update">
+                                            編集
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-5">
+                        <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-7">
+                        <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
+                        </div>
+                        <div id="pager" class="div_pager_parent float-right"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
