--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -14,86 +14,101 @@ Aa-12
 
 <div class="card">
     <div class="card-body">
-        <form method="post">
-            <%- include('../../common/master/_hidden') %>
-            <div class="menu-group">
-            </div>
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+        </div>
+        <div class="material-datatables">
+            <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <form method="post">
+                            <%- include('../../common/master/_hidden') %>
+                            <div class="menu-group">
+                            </div>
 
-            <div class="form-group bmd-form-group">
-                <label for="name" class="bmd-label-static">
-                    名称
-                </label>
-                <input class="form-control" name="name" id="name" placeholder="" maxlength=64>
-            </div>
+                            <div class="form-group bmd-form-group">
+                                <label for="name" class="bmd-label-static">
+                                    名称
+                                </label>
+                                <input class="form-control" name="name" id="name" placeholder="" maxlength=64>
+                            </div>
 
-            <div>
-                <a class="btn btn-primary" role="button" href="/places/movieTheater/new">
-                    <i class=" fa fa-plus"></i> 登録</a>
+                            <div>
+                                <a class="btn btn-primary" role="button" href="/places/movieTheater/new">
+                                    <i class=" fa fa-plus"></i> 登録</a>
 
-                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-            </div>
-        </form>
-    </div>
-</div>
-
-<div class="form-container search">
-    <div id="list" style="display:none;">
-
-        <div class="card">
-            <div class="card-body">
-                <div class="table-responsive">
-
-                    <table class="table">
-                        <thead class="text-primary">
-                            <tr>
-                                <th>コード</th>
-                                <th>名称</th>
-                                <th>電話番号</th>
-                                <th>販売条件</th>
-                                <th>スクリーン</th>
-                                <th>追加特性</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr id="templateRow" identifier="">
-                                <td name="id__branchCode">
-                                    <a target="_blank" href="/places/movieTheater/$id$/update">
-                                        $branchCode$
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                    </a>
-                                </td>
-                                <td name="name.ja|slice__name.en|slice">
-                                    $name.ja$<br>
-                                    $name.en$
-                                </td>
-                                <td name="telephone">
-                                    <p>$telephone$</p>
-                                </td>
-                                <td
-                                    name="offers.eligibleQuantity.maxValue__availabilityStartsGraceTimeInDays__availabilityEndsGraceTimeInMinutes">
-                                    $offers.eligibleQuantity.maxValue$ 席まで
-                                    <br>$availabilityStartsGraceTimeInDays$日前から$availabilityEndsGraceTimeInMinutes$まで販売
-                                </td>
-                                <td name="id" class="">
-                                    <a href="javascript:void(0)" class="showContainsPlace" data-id="$id$">
-                                        <span>表示</span>
-                                    </a>
-                                </td>
-                                <td name="branchCode" class="">
-                                    <a href="javascript:void(0)" class="showAdditionalProperty"
-                                        data-branchCode="$branchCode$">
-                                        <span>表示</span>
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                                <button type="button"
+                                    class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+                                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-
-                <div id="pager" class="div_pager_parent"></div>
+                <div id="list" style="display:none;" class="row">
+                    <div class="col-sm-12">
+                        <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
+                            cellspacing="0" width="100%" style="width: 100%;" role="grid"
+                            aria-describedby="datatables_info">
+                            <thead class="text-primary">
+                                <tr>
+                                    <th>コード</th>
+                                    <th>名称</th>
+                                    <th>電話番号</th>
+                                    <th>販売条件</th>
+                                    <th>スクリーン</th>
+                                    <th>追加特性</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr id="templateRow" identifier="">
+                                    <td name="id__branchCode">
+                                        <a target="_blank" href="/places/movieTheater/$id$/update">
+                                            $branchCode$
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                        </a>
+                                    </td>
+                                    <td name="name.ja|slice__name.en|slice">
+                                        $name.ja$<br>
+                                        $name.en$
+                                    </td>
+                                    <td name="telephone">
+                                        <p>$telephone$</p>
+                                    </td>
+                                    <td
+                                        name="offers.eligibleQuantity.maxValue__availabilityStartsGraceTimeInDays__availabilityEndsGraceTimeInMinutes">
+                                        $offers.eligibleQuantity.maxValue$ 席まで
+                                        <br>$availabilityStartsGraceTimeInDays$日前から$availabilityEndsGraceTimeInMinutes$まで販売
+                                    </td>
+                                    <td name="id" class="">
+                                        <a href="javascript:void(0)" class="showContainsPlace" data-id="$id$">
+                                            <span>表示</span>
+                                        </a>
+                                    </td>
+                                    <td name="branchCode" class="">
+                                        <a href="javascript:void(0)" class="showAdditionalProperty"
+                                            data-branchCode="$branchCode$">
+                                            <span>表示</span>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-5">
+                        <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-7">
+                        <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
+                        </div>
+                        <div id="pager" class="div_pager_parent float-right"></div>
+                    </div>
+                </div>
             </div>
         </div>
+
 
     </div>
 </div>
