--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -45,74 +45,83 @@ ST-01
             </div>
 
             <div>
-                <!-- <a class="btn btn-primary" role="button" href="/places/movieTheater/new">
-                    <i class=" fa fa-plus"></i> 登録</a> -->
+                <a class="btn btn-primary disabled" role="button" href="/places/movieTheater/new">
+                    <i class=" fa fa-plus"></i> 登録</a>
                 <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
                 <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
             </div>
         </form>
-    </div>
-</div>
-
-<div class="form-container search">
-    <div id="list" style="display:none;">
-
-        <div class="card">
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead class="text-primary">
-                            <tr>
-                                <th>コード</th>
-                                <th>劇場</th>
-                                <th>スクリーン</th>
-                                <th>セクション</th>
-                                <th>座席タイプ</th>
-                                <th>追加特性</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr id="templateRow" identifier="">
-                                <td
-                                    name="containedInPlace.containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.branchCode__containedInPlace.branchCode__branchCode__branchCode">
-                                    <a target="_blank"
-                                        href="/places/seat/$containedInPlace.containedInPlace.containedInPlace.branchCode$:$containedInPlace.containedInPlace.branchCode$:$containedInPlace.branchCode$:$branchCode$/update">
-                                        $branchCode$
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                    </a>
-                                </td>
-                                <td
-                                    name="containedInPlace.containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.containedInPlace.name.ja|slice">
-                                    <span
-                                        class="font-italic text-muted">$containedInPlace.containedInPlace.containedInPlace.branchCode$</span>
-                                    $containedInPlace.containedInPlace.containedInPlace.name.ja$
-                                </td>
-                                <td
-                                    name="containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.name.ja|slice">
-                                    <span
-                                        class="font-italic text-muted">$containedInPlace.containedInPlace.branchCode$</span>
-                                    $containedInPlace.containedInPlace.name.ja$
-                                </td>
-                                <td name="containedInPlace.branchCode__containedInPlace.name.ja|slice">
-                                    <span class="font-italic text-muted">$containedInPlace.branchCode$</span>
-                                    $containedInPlace.name.ja$
-                                </td>
-                                <td name="seatingTypeStr">
-                                    $seatingTypeStr$<br>
-                                </td>
-                                <td name="id" class="">
-                                    <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
-                                        <span>表示</span>
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+        <div class="material-datatables">
+            <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="row">
                 </div>
-                <div id="pager" class="div_pager_parent"></div>
+                <div id="list" style="display:none;" class="row">
+                    <div class="col-sm-12">
+                        <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
+                            cellspacing="0" width="100%" style="width: 100%;" role="grid"
+                            aria-describedby="datatables_info">
+                            <thead class="text-primary">
+                                <tr>
+                                    <th>コード</th>
+                                    <th>劇場</th>
+                                    <th>スクリーン</th>
+                                    <th>セクション</th>
+                                    <th>座席タイプ</th>
+                                    <th>追加特性</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr id="templateRow" identifier="">
+                                    <td
+                                        name="containedInPlace.containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.branchCode__containedInPlace.branchCode__branchCode__branchCode">
+                                        <a target="_blank"
+                                            href="/places/seat/$containedInPlace.containedInPlace.containedInPlace.branchCode$:$containedInPlace.containedInPlace.branchCode$:$containedInPlace.branchCode$:$branchCode$/update">
+                                            $branchCode$
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                        </a>
+                                    </td>
+                                    <td
+                                        name="containedInPlace.containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.containedInPlace.name.ja|slice">
+                                        <span
+                                            class="font-italic text-muted">$containedInPlace.containedInPlace.containedInPlace.branchCode$</span>
+                                        $containedInPlace.containedInPlace.containedInPlace.name.ja$
+                                    </td>
+                                    <td
+                                        name="containedInPlace.containedInPlace.branchCode__containedInPlace.containedInPlace.name.ja|slice">
+                                        <span
+                                            class="font-italic text-muted">$containedInPlace.containedInPlace.branchCode$</span>
+                                        $containedInPlace.containedInPlace.name.ja$
+                                    </td>
+                                    <td name="containedInPlace.branchCode__containedInPlace.name.ja|slice">
+                                        <span class="font-italic text-muted">$containedInPlace.branchCode$</span>
+                                        $containedInPlace.name.ja$
+                                    </td>
+                                    <td name="seatingTypeStr">
+                                        $seatingTypeStr$<br>
+                                    </td>
+                                    <td name="id" class="">
+                                        <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
+                                            <span>表示</span>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-5">
+                        <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-7">
+                        <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
+                        </div>
+                        <div id="pager" class="div_pager_parent float-right"></div>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
 </div>
 
