--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -34,37 +34,48 @@ PR-00
                 <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
             </div>
         </form>
-    </div>
-</div>
-
-<div class="form-container search">
-    <div id="list" style="display:none;">
-        <div class="card">
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead class="text-primary">
-                            <tr>
-                                <th>ID</th>
-                                <th>名称</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr id="templateRow">
-                                <td name="id__id">
-                                    <a target="_blank" href="/products/$id$">
-                                        $id$
-                                        <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
-                                    </a>
-                                </td>
-                                <td name="name.ja">
-                                    $name.ja$
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+        <div class="material-datatables">
+            <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="row">
                 </div>
-                <div id="pager" class="div_pager_parent"></div>
+                <div id="list" style="display:none;" class="row">
+                    <div class="col-sm-12">
+                        <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
+                            cellspacing="0" width="100%" style="width: 100%;" role="grid"
+                            aria-describedby="datatables_info">
+                            <thead class="text-primary">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>名称</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr id="templateRow">
+                                    <td name="id__id">
+                                        <a target="_blank" href="/products/$id$">
+                                            $id$
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
+                                        </a>
+                                    </td>
+                                    <td name="name.ja">
+                                        $name.ja$
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-5">
+                        <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-7">
+                        <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
+                        </div>
+                        <div id="pager" class="div_pager_parent float-right"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
