### Changed - レイアウト調整

--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -225,3 +225,21 @@ body {
         }
     }
 }
+.card {
+    .toolbar {
+        .btn {
+            font-weight: 500;
+            padding: 0.5rem 0.8rem;
+        }
+    }
+}
+.card {
+    .toolbar {
+        .btn {
+            .material-icons {
+                // font-size: 1.4rem;
+                // margin: -2px 2px 0 0;
+            }
+        }
+    }
+}
