--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,6 +201,10 @@ body {
 .card .card-body .form-group {
   margin: 1rem 0 0; }
 
+.card .toolbar .btn {
+  font-weight: 500;
+  padding: 0.5rem 0.8rem; }
+
 .scheduler {
   margin: 0 auto;
   overflow: auto;
