--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-劇場検索
+劇場
 <%- contentFor('displayId') %>
 Aa-12
 <%- contentFor('styles') %>
@@ -16,6 +16,10 @@ Aa-12
     <div class="card-body">
         <div class="toolbar">
             <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <a class="btn btn-primary" href="/places/movieTheater/new">
+                <i class="material-icons">add</i>登録</a>
+            <a class="btn btn-primary search btn-ok" href="#">
+                <i class="material-icons">refresh</i>更新</a>
         </div>
         <div class="material-datatables">
             <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
@@ -23,23 +27,12 @@ Aa-12
                     <div class="col-sm-12">
                         <form method="post">
                             <%- include('../../common/master/_hidden') %>
-                            <div class="menu-group">
-                            </div>
 
                             <div class="form-group bmd-form-group">
                                 <label for="name" class="bmd-label-static">
                                     名称
                                 </label>
                                 <input class="form-control" name="name" id="name" placeholder="" maxlength=64>
-                            </div>
-
-                            <div>
-                                <a class="btn btn-primary" role="button" href="/places/movieTheater/new">
-                                    <i class=" fa fa-plus"></i> 登録</a>
-
-                                <button type="button"
-                                    class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-                                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
                             </div>
                         </form>
                     </div>
